Fix js tool index spacing

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -39,7 +39,7 @@ a {
   background: linear-gradient(to right, rgba(255,255,255,0) 0%, rgba(255,255,255,0.3) 5%, rgba(255,255,255,0.3) 95%, rgba(255,255,255,0) 100%);
 }
 
-.inside {
+.inside, .content-container {
   width: 90%;
   margin: 0 auto;
 }
